# meeting-notes

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PHASE_1_CHECKPOINT.md  PHASE_2_CHECKPOINT.md  PHASE_3_CHECKPOINT.md  PHASE_4_CHECKPOINT.md  PHASE_5_CHECKPOINT.md  README.md  SOP.md  index.html  package-lock.json  package.json  vite.config.ts
samples/: AGENTS.md  EXCEL_INTEGRATION_GUIDE.md  action_items_sample.csv  action_items_sample.json
src/: AGENTS.md  App.tsx  main.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: AGENTS.md  lib.rs  main.rs
src-tauri/src/ai/: AGENTS.md  mock_provider.rs  mod.rs  openai_provider.rs  provider.rs  types.rs
src-tauri/src/app/: AGENTS.md  state.rs
src-tauri/src/app/commands/: AGENTS.md  action_item_commands.rs  ai_commands.rs  export_commands.rs  meeting_commands.rs  mod.rs  search_commands.rs  seed_commands.rs  settings_commands.rs
src-tauri/src/config/: AGENTS.md  app_config.rs  mod.rs  portable.rs
src-tauri/src/db/: AGENTS.md  action_item_repo.rs  connection.rs  meeting_repo.rs  migrations.rs  mod.rs  search_repo.rs
src-tauri/src/domain/: AGENTS.md  action_item.rs  extraction.rs  meeting.rs  minutes.rs  mod.rs  settings.rs
src-tauri/src/export/: AGENTS.md  mod.rs  pdf.rs
src-tauri/src/services/: AGENTS.md  action_item_service.rs  export_service.rs  meeting_service.rs  mod.rs
src-tauri/src/utils/: AGENTS.md  errors.rs
src/components/: AGENTS.md
src/hooks/: AGENTS.md  use-autosave.ts
src/lib/: AGENTS.md  api.ts  templates.ts  utils.ts
(+29 files in other folders)
