[package]
name = "meeting-notes"
version = "0.1.0"
edition = "2021"
description = "Meeting Notes & Action Intelligence"

[lib]
name = "meeting_notes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }
keyring = { version = "3", features = ["windows-native"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
log = "0.4"
env_logger = "0.11"
csv = "1"
printpdf = "0.7"
